kubernetes/apps/observability/victoria-logs/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: victoria-logs-server
  annotations:
    gatus.home-operations.com/endpoint: |-
      group: observability
spec:
  hostnames:
    - logs.vzkn.eu
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - name: victoria-logs-server
          port: 9428
